# download_rename

./: GITHUB_ACTIONS_README.md  README.md  build.py  build_config.py  download_rename_app.py  download_rename_app.spec  pyproject.toml  requirements.txt  setup.py  test_app.py
.github/workflows/: build.yml  ci.yml  release.yml
